# framework.uifw.elm-modules

./: AUTHORS  COPYING  project.config
access_output_tts/: configure.ac
access_output_tts/sounds/: file.list
access_output_tts/src/: Makefile.am  mod.c
edje_feedback/: configure.ac  feedback.c
mobile/access_output_tts/: configure.ac
mobile/access_output_tts/src/: mod.c
naviframe_effect/: Makefile.am  configure.ac  naviframe_effect.c
packaging/: elm-modules.spec
wearable/access_output_tts/: configure.ac
wearable/access_output_tts/src/: mod.c
